# ProperPhysicalEducation

./: .gitattributes  README.md  Vision.md
src/client/: .env.example  Makefile  README.md  discover_sensors.py  main.py  pyproject.toml
src/client/src/: main.py
src/client/src/poses/: __init__.py  camera.py  visualize.py
src/client/src/poses/cameras/: __init__.py  camera_capture_worker.py  camera_service.py  errors.py  pose_capture_worker.py
src/client/src/poses/capturing/: pose_capture_orchestrator.py  pose_capture_session.py  pose_capture_worker.py
src/client/src/ppe_client/: di.py  discover_sensors.py  main.py  test_sensor.py
src/client/src/ppe_client/adapters/: __init__.py
src/client/src/ppe_client/application/: CONTEXT.md  __init__.py  async_pose_reciever_wrapper.py  feedback.py  process_data.py  process_synchornizer.py
src/client/src/ppe_client/domain/: CONTEXT.md  __init__.py  camera_descriptor.py  camera_identity.py  sensor_descriptor.py
src/client/src/ppe_client/poses/: __init__.py  model.py
src/client/src/ppe_client/presentation/: main_window.py
src/client/src/ui/: main_window.py  my_screen.py
src/server/: .env.example  .gitignore  Dockerfile  Makefile  config.py  docker-compose-override.yml  docker-compose.yml  pyproject.toml  server.py
src/server/analyzer/exercise/: exercise_analyzer.py  exercise_state.py  exercise_state_machine.py
src/server/analyzer/factory/: exercise_analyzer_factory.py
src/server/analyzer/feedback/: feedback_generator.py  rule_evaluator.py
src/server/analyzer/pose/: pose_detector.py  pose_deviants.py  pose_matcher.py
src/server/application/dto/: exercises.py  feedback.py  process.py  session.py
src/server/application/mapper/: pose_mapper.py  process_context_mapper.py
src/server/application/processor/: camera_pose_processor.py  process_context.py  sensor_processor.py
src/server/application/service/: evaluate_exercise_use_case.py  start_session_use_case.py
src/server/application/usecase/: evaluate_exercise_use_case.py  get_exercises_use_case.py  start_session_use_case.py
src/server/composition/: main.py
src/server/composition/di/: application_di.py  container.py  infrastructure_di.py
src/server/data/exercise/: cactus_exercise.json  lateral_raises_exercise.json
src/server/data/pose/: arms_down_pose.json  bent_elbows_pose.json  cactus_pose.json  hands_on_hips.json  hands_on_hips_pose.json  semi_squat_pose.json  t_pose.json
src/server/domain/model/: angle.py  emg.py  emg_rule.py  exercise.py  exercise_id.py  exercise_state.py  feedback.py  landmark.py  pose.py  pose_id.py  pose_match_result.py  pose_rule.py  rule.py  session.py  session_id.py  zone.py
src/server/domain/ports/: errors.py  exercise_repository.py  pose_repository.py  session_repository.py
src/server/domain/service/: exercise_state_machine.py
src/server/loader/: exercise_loader.py  pose_loader.py
src/server/model/: exercise.py  pose.py  pose_match_result.py  rule.py
src/server/presentation/mapper/: process_request_mapper.py  session_request_mapper.py
src/server/presentation/routes/: evaluate.py  exercise.py  session.py
src/server/presentation/schemas/: analyze.py  exercises.py  feedback.py  landmarks.py  process.py
src/server/schemas/: error.py  feedback.py
src/server/test/: pose_detector_test.py
src/server/test/exercise/: exercise_analyzer_test.py
src/server/test/util/: pose_factory.py
(+652 files in other folders)
