[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cv2-enumerate-cameras>=1.3.3",
    "httpx>=0.28.1",
    "mediapipe>=0.10.32",
    "opencv-python>=4.12.0.88",
    "pydantic>=2.12.5",
    "pyside6>=6.10.2",
    "pytest-mock>=3.15.1",
    "pytest-qt>=4.5.0",
    "qasync>=0.28.0",
    "requests>=2.32.5",
    "types-requests>=2.32.4.20260107",
    "websockets>=16.0",
    "wired>=0.4",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.15.4",
    "pytest>=9.0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E", 
		"W",
		"F", 
    "I",
    "UP",
    "N",
    "B",
    "C4",
		"C90",
		"PLR",
		"SIM",
    "RUF"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

